@@ -4,6 +4,7 @@ Unreleased Version 2.2.1-pre
  * Fix: Don't force TLS socket algorithms, since ECDSA certs seem to not like them. Thanks Bluestrings for reporting.
  * Fix: Log message queue read, write and timeout errors properly. Thanks Pepper for reporting.
  * Feature: Implement WebSocket support in the server, available with the --websocket-port and --websocket-listen options.
+ * Feature: Send keepalive messages from the server, if the client indicates support for it. Avoids them disconnecting when too busy uploading to send a ping.
 
 2024-01-13 Version 2.2.0
  * Server Fix: Add --ssl-key-algorithm parameter to allow non-RSA SSL keys, defaulting to guessing the most common formats RSA and EC. Thanks Bluestrings for reporting.
